--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,19 @@
         "iostream": "cpp",
         "array": "cpp",
         "typeinfo": "cpp",
-        "list": "cpp"
+        "list": "cpp",
+        "deque": "cpp",
+        "memory_resource": "cpp",
+        "string": "cpp",
+        "vector": "cpp",
+        "chrono": "cpp",
+        "compare": "cpp",
+        "memory": "cpp",
+        "optional": "cpp",
+        "string_view": "cpp",
+        "thread": "cpp",
+        "tuple": "cpp",
+        "variant": "cpp",
+        "new": "cpp"
     }
 }
