--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,6 +19,10 @@
         "thread": "cpp",
         "tuple": "cpp",
         "variant": "cpp",
-        "new": "cpp"
+        "new": "cpp",
+        "*.ipp": "cpp",
+        "functional": "cpp",
+        "utility": "cpp",
+        "istream": "cpp"
     }
 }
